syntax = "proto3";
package daemon;

option go_package = "pkg/daemon";

// The greeting service definition.
service Daemon {
    // Sends a greeting
    rpc Sync (SyncRequest) returns (SyncReply) {}
    rpc SyncTipset (SyncRequest) returns (SyncReply) {}
    rpc SyncMessages (SyncRequest) returns (SyncReply) {}
    rpc SyncAddress (SyncRequest) returns (SyncReply) {}
    rpc SyncIndex (SyncRequest) returns (SyncReply) {}
    rpc SyncLily (SyncRequest) returns (SyncReply) {}
    rpc SyncValidate (SyncRequest) returns (SyncReply) {}
    rpc ProfileMemory (ProfileRequest) returns (Reply) {}

    rpc KvDel (KvRequest) returns (KvReply) {}
    rpc KvGet (KvRequest) returns (KvReply) {}
    rpc KvMatch (KvRequest) returns (KvReply) {}
}

// The request message containing the user's name.
message SyncRequest {
    enum Action {
        START = 0;
        STOP = 1;
      }
    Action action = 1;
    uint64 height = 2;
    uint64 length = 3;
}

// The response message containing the greetings
message SyncReply {
    string message = 1;
}

// The request message containing the user's name.
message KvRequest {
    string key = 1;
    string val = 2;
    string operand = 3;
    uint64 lenght = 4;
    uint64 offset = 5;
}

// The response message containing the greetings
message KvReply {
    string message = 1;
}

message ProfileRequest {
    enum Action {
        START = 0;
        STOP = 1;
      }
    Action action = 1;
}

// The response message containing the greetings
message Reply {
    string message = 1;
}
